--- a/src/app/pages/super-admin/admin-provider/providerdialog/providerdialog.component.html
+++ b/src/app/pages/super-admin/admin-provider/providerdialog/providerdialog.component.html
@@ -462,7 +462,7 @@
                       color: #ddd;
                     "
                   >
-                    Category
+                  Class
                   </th>
                   <th
                     class="text-center"
@@ -510,7 +510,7 @@
                   >
                     <mat-select
                       class="form-control"
-                      placeholder="Select Category"
+                      placeholder="Select Class"
                     >
                       <mat-option [value]="'Medical'">Medical</mat-option>
                       <mat-option [value]="'Surgery/Procedures'"
